Navigation: removing !important. I've also added "Read More" button on the Meta-Block below, but I have to insert custom css because I have to move it on the right side of the block and I've fixed the alignment of the button from the text.

--- a/public_html/wp-content/themes/shocoon/css/custom.css
+++ b/public_html/wp-content/themes/shocoon/css/custom.css
@@ -464,7 +464,6 @@ header aside > nav li a {
 
 .met_main_nav a {
     line-height: 60px;
-    padding: 0 !important;
     color: #FFFFFF;
     display: inline-block;
     margin-right: 53px;
