--- a/public_html/wp-content/themes/shocoon/css/superfish.css
+++ b/public_html/wp-content/themes/shocoon/css/superfish.css
@@ -76,7 +76,7 @@
 
 /*** arrows (for all except IE7) **/
 .sf-arrows .sf-with-ul {
-	padding-right: 2.5em;
+	padding-right: 0;
 	*padding-right: 1em; /* no CSS arrows for IE7 (lack pseudo-elements) */
 }
 /* styling for both css and generated arrows */
